// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShippingPrice should render call shipping cost 1`] = `
<Text
  color="primary"
  onPress={[Function]}
>
  Call
</Text>
`;

exports[`ShippingPrice should render with a shipping cost 1`] = `
<Text>
  $123.45
</Text>
`;

exports[`ShippingPrice should render with default props 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <Text
    decoration="line-through"
    style={
      Object {
        "marginRight": 4,
      }
    }
  >
    $5.99
  </Text>
  <Text
    color="accent"
    weight="bold"
  >
    FREE
  </Text>
</View>
`;

exports[`ShippingPrice should render with null shippingCost 1`] = `
<Text>
  --
</Text>
`;
